--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -48,7 +48,7 @@
           </g>
         </svg>
       </a>
-      <a href="www.linkedin.com/in/chawin-k" target="_blank" class="mx-3" aria-label="Linkedin">
+      <a href="https://www.linkedin.com/in/chawin-k" target="_blank" class="mx-3" aria-label="Linkedin">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
           style="fill: currentColor;transform: ;msFilter:;">
           <circle cx="4.983" cy="5.009" r="2.188"></circle>
