--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -13,8 +13,7 @@
     <ul>
       <!-- Sidebar content here -->
       <li><a href="/">Home</a></li>
-      <li><a href="/projects">Projects</a></li>
-      <li><a href="/blog/1">Blog</a></li>
+      <li><a href="/works">Works</a></li>
       <li><a href="/cv">CV</a></li>
     </ul>
     <div class="grow"></div>
