--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -5,7 +5,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 <BaseLayout>
   <div>
-    <div class="text-3xl w-full font-bold mb-5">Projects Header</div>
+    <div class="text-3xl w-full font-bold mb-5">My Works</div>
   </div>
 
   <HorizontalCard
