feat: add medium article in works

--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -14,5 +14,13 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     desc="Fourth year senior project"
     url="https://ecourse.cpe.ku.ac.th/projar/project/details/1263/"
   />
+  
   <div class="divider my-0"></div>
+
+  <HorizontalCard
+    title="Zero-Knowledge Protocols 101"
+    img="/post_img.webp"
+    desc="Medium article"
+    url="https://medium.com/kbtg-life/zero-knowledge-protocols-101-86c0782b664"
+  />
 </BaseLayout>
