--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,4 +25,10 @@ import HorizontalCard from "../components/HorizontalCard.astro";
       desc="Fourth year senior project"
       url="https://ecourse.cpe.ku.ac.th/projar/project/details/1263/"
     />
+    <HorizontalCard
+      title="Zero-Knowledge Protocols 101"
+      img="/post_img.webp"
+      desc="Medium article"
+      url="https://medium.com/kbtg-life/zero-knowledge-protocols-101-86c0782b664"
+    />
 </BaseLayout>
