--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -26,7 +26,7 @@
           </path>
         </svg>
       </a>
-      <a href="https://twitter.com/charvin98" target="_blank" class="mx-3" aria-label="Twitter">
+      <a href="https://twitter.com/chawinkas" target="_blank" class="mx-3" aria-label="Twitter">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
           style="fill: currentColor;transform: ;msFilter:;">
           <path
@@ -34,7 +34,7 @@
           </path>
         </svg>
       </a>
-      <a href="https://www.facebook.com/ballpor98" target="_blank" class="mx-3" aria-label="Facebook">
+      <a href="https://www.facebook.com/chawinkasikitpongpan" target="_blank" class="mx-3" aria-label="Facebook">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 172 172"
           style=" fill:#000000;">
           <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal">
